acceptance/backend/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dissco-backend-deployment
  namespace: default
  labels:
    app: dissco-backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dissco-backend
  template:
    metadata:
      labels:
        app: dissco-backend
    spec:
      serviceAccountName: secret-manager
      containers:
        - name: dissco-backend
          image: public.ecr.aws/dissco/dissco-core-backend
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
          volumeMounts:
            - name: aws-secrets
              mountPath: "/mnt/secrets-store"
              readOnly: true
      volumes:
        - name: aws-secrets
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "aws-secrets"
